# backend-challenge-092025

./: conftest.py  main.py  pyproject.toml  requirements.txt  sentiment_analyzer.py
.github/workflows/: audit.yml  lint.yml  perftest.yml  test.yml
tests/: test_analyzer.py  test_performance.py
